tests/tests/test038.expected
Error: syntax error, unterminated quoted atom, tests/tests/test038.pl:3
